# ComfyUI-NeuralMedia

./: __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: apply_controlnet.py  apply_style_model_enhanced.py  apply_style_model_simple.py  batch_images.py  birefnet.py  clip_vision_style_model_apply.py  frame_calculator.py  inpaint.py  inpaint_conditioning.py  inpaint_weld.py  multi_clip_vision_style_model.py  outpaint.py  prepare_img_4_vid.py  remove_background.py  save_image.py  stitch_images.py  stitch_images_and_masks.py  style_model_apply_Enhanced.py  style_model_apply_simple.py  text_field.py  tile_checkpoint_patch.py  unstitch_images.py  unstitch_images_and_masks.py  vace_patch_loader.py  vtracer_image_vectorizer_node.py  weld_inpaint.py
