[project]
name = "ComfyUI-NeuralMedia"
description = "A set of nodes that allow data to be 'broadcast' to some or all unconnected inputs. Greatly reduces link spaghetti."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/YarvixPA/ComfyUI-NeuralMedia"

[tool.comfy]
PublisherId = "yarvixpa"
DisplayName = "ComfyUI-NeuralMedia"
Icon = ""
