[project]
name = "ComfyUI-NeuralMedia"
description = "A set of custom nodes modified to achieve things I felt were missing."
version = "0.0.1"
# license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/YarvixPA/ComfyUI-NeuralMedia"

[tool.comfy]
PublisherId = "yarvixpa"
DisplayName = "ComfyUI-NeuralMedia"
Icon = ""
